syntax = "proto3";

option java_package = "sy.game.message";
option java_outer_classname = "ClubCommon";

//游戏房间配置数据
message ClubGameConfig {
  GameBasicConfig basicConfig = 1;
  TexasConfig texasConfig = 2;
  optional ShortConfig shortConfig = 3;
  optional MatchingConfig matchingConfig = 4;
}

//比赛进行中的数据
message MatchingConfig {
  int64 currentPlayerNum = 1; //当前玩家数量
  int64 startTime = 2; //游戏开始时间
}

//基础游戏设置
message GameBasicConfig {
  GameType gameType = 1; //俱乐部创建牌局时候，游戏类型
  string gameName = 2; //俱乐部创建牌局时候，牌局名称
  GameCurrencyType currencyType = 3; //俱乐部创建游戏的时候，货币类型设定
  GameTaxType taxType = 4; //俱乐部创建游戏的时候，抽水类型设定
  int64 taxRatio = 5;    //俱乐部创建牌局时候，抽水数值
}

//德州设置
message TexasConfig{
  int64 smallBlind = 1; //俱乐部创建房间时，小盲设定
  bool straddle = 2;   //俱乐部创建牌局时候，抓头设定
  int64 ante = 3;  //俱乐部创建牌局时候，前注设定
  int64 maxTotalBuyIn = 4; //俱乐部创建牌局时候，最大买入设定, 买了很多次后的总数量不能超过这个值
  int64 minBringIn = 5;//俱乐部创建牌局时候，最小带入设定，单次最多带入多少
  int64 maxBringIn = 6; //俱乐部创建牌局时候，最大带入设定，单次最多带入多少
  bool allowBringOut = 7; //俱乐部创建牌局时候，是否允许带出
  int64 minScoreAfterBringOut = 8; //俱乐部创建牌局时候，带出后，必须至少保留的积分
  bool insurance = 9; //俱乐部创建牌局时候，是否开通保险功能
  int64 gameDuration = 10; //俱乐部创建牌局时候，牌局时间长度
  int64 thinkingTime = 11; //俱乐部创建牌局时候，思考时间长度
  int64 seatNum = 12; //俱乐部创建牌局时候，座位数
  int64 autoStartNum = 13; //俱乐部创建牌局时候，自动开始人数
  bool gpsLimit = 14;  //俱乐部创建牌局时候，gps
  bool ipLimit = 15;  //俱乐部创建牌局时候，ip
}
//短牌设置
message ShortConfig {
  ShortGameScoreMode scoreMode = 1;
  int64 baseScore = 2;
  bool buttonDouble = 3;
}


//俱乐部房间类型
enum GameType {
    GameType_TexasCash = 0; //德州现金
    GameType_ShortCash = 1;  //短牌现金
    GameType_Mtt = 2; //MTT比赛
    GameType_Omh = 3; //奥马哈
}

//俱乐部房间 抽水类型
enum GameTaxType {
    GameTaxType_EveryRound = 0;//每轮都抽
    GameTaxType_WholeGameEnd = 1;//游戏结束抽赢家
}

//俱乐部房间 货币类型
enum GameCurrencyType {
    GameCurrencyType_Point = 0;//积分
    GameCurrencyType_Coin = 1;//金币
}

//俱乐部房间 短牌底池类型
enum ShortGameScoreMode {
    ShortGameScoreMode_AnteMode = 0;
    ShortGameScoreMode_BlindMode = 1;
}

enum RecordDateType {
    RecordDateType_Today = 0; //今天
    RecordDateType_Week = 1; //本周
    RecordDateType_Month = 2; //本月
}