syntax = "proto3";
package PokerLife.Club;

//游戏房间配置数据
message GameConfig {
    required GameBasicConfig basicConfig = 1;
    required TexasConfig texasConfig =2;
    optional ShortConfig shortConfig = 3;
    optional MatchingConfig matchingConfig = 4;
}

//比赛进行中的数据
message MatchingConfig {
    required int64 currentPlayerNum = 1; //当前玩家数量
    required int64 startTime = 2; //游戏开始时间
}

//基础游戏设置
message GameBasicConfig {
    required GameType gameType = 1; //俱乐部创建牌局时候，游戏类型
    required string gameName = 2; //俱乐部创建牌局时候，牌局名称
    required GameCurrencyType currencyType = 3; //俱乐部创建游戏的时候，货币类型设定
    required GameTaxType taxType = 4; //俱乐部创建游戏的时候，抽水类型设定
    required int64 taxRatio = 5;    //俱乐部创建牌局时候，抽水数值
}

//德州设置
message TexasConfig{
    required int64 smallBlind = 1; //俱乐部创建房间时，小盲设定
    required bool straddle = 2;   //俱乐部创建牌局时候，抓头设定
    required int64 ante = 3;  //俱乐部创建牌局时候，前注设定
    required int64 maxTotalBuyIn = 4; //俱乐部创建牌局时候，最大买入设定, 买了很多次后的总数量不能超过这个值
    required int64 minBringIn = 5;//俱乐部创建牌局时候，最小带入设定，单次最多带入多少
    required int64 maxBringIn = 6; //俱乐部创建牌局时候，最大带入设定，单次最多带入多少
    required bool allowBringOut = 7; //俱乐部创建牌局时候，是否允许带出
    required int64 minScoreAfterBringOut = 8; //俱乐部创建牌局时候，带出后，必须至少保留的积分
    required bool insurance = 9; //俱乐部创建牌局时候，是否开通保险功能
    required int64 gameDuration = 10; //俱乐部创建牌局时候，牌局时间长度
    required int64 thinkingTime = 11; //俱乐部创建牌局时候，思考时间长度
    required int64 seatNum = 12; //俱乐部创建牌局时候，座位数
    required int64 autoStartNum = 13; //俱乐部创建牌局时候，自动开始人数
    required bool gpsLimit = 14;  //俱乐部创建牌局时候，gps
    required bool ipLimit = 15;  //俱乐部创建牌局时候，ip
}
//短牌设置
message ShortConfig {
    required ShortGameScoreMode scoreMode = 1;
    required int64 baseScore = 2;
    required bool buttonDouble = 3;
}


//俱乐部房间类型
enum GameType {
    TexasCash = 0; //德州现金
    ShortCash = 1;  //短牌现金
    Mtt = 2; //MTT比赛
    Omh = 3; //奥马哈
}

//俱乐部房间 抽水类型
enum GameTaxType {
    EveryRound = 0;//每轮都抽
    WholeGameEnd = 1;//游戏结束抽赢家
}

//俱乐部房间 货币类型
enum GameCurrencyType {
    Point = 0;//积分
    Coin = 1;//金币
}

//俱乐部房间 短牌底池类型
enum ShortGameScoreMode {
    AnteMode = 0;
    BlindMode = 1;
}

enum RecordDateType {
    Today = 0; //今天
    Week = 1; //本周
    Month = 2; //本月
}